// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDatePicker.ts should allow setting date props 1`] = `
<div class="v-picker v-card v-date-time-picker theme--light">
  <div class="v-picker__title primary">
    <div class="v-date-time-picker__headers">
      <div class="v-date-picker-title">
        <div class="v-picker__title__btn v-date-picker-title__year">
          -
        </div>
        <div class="v-picker__title__btn v-date-picker-title__date v-picker__title__btn--active">
          <div>
            -
          </div>
        </div>
      </div>
      <div class="v-time-picker-title">
        <div class="v-time-picker-title__time">
          <div class="v-picker__title__btn v-picker__title__btn--active">
            --
          </div>
          <span>
            :
          </span>
          <div class="v-picker__title__btn">
            --
          </div>
        </div>
      </div>
    </div>
    <div class="v-tabs v-tabs--grow theme--light">
      <div role="tablist"
           class="v-item-group theme--light v-slide-group v-tabs-bar primary--text"
      >
        <div class="v-slide-group__prev v-slide-group__prev--disabled">
        </div>
        <div class="v-slide-group__wrapper">
          <div class="v-slide-group__content v-tabs-bar__content">
            <div class="v-tabs-slider-wrapper"
                 style="transition: none;"
            >
              <div class="v-tabs-slider">
              </div>
            </div>
            <div tabindex="0"
                 aria-selected="true"
                 role="tab"
                 class="v-tab v-tab--active"
            >
              date
            </div>
            <div tabindex="0"
                 aria-selected="false"
                 role="tab"
                 class="v-tab"
            >
              time
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-picker__body theme--light"
       style="width: 290px;"
  >
    <div class="v-window v-item-group theme--light v-tabs-items">
      <div class="v-window__container">
        <div class="v-window-item v-window-item--active">
          <div>
            <div class="v-date-picker-header theme--light">
              <button type="button"
                      class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--small"
              >
                <span class="v-btn__content">
                  <i aria-hidden="true"
                     class="v-icon notranslate mdi mdi-chevron-left theme--light"
                  >
                  </i>
                </span>
              </button>
              <div class="v-date-picker-header__value">
                <div class="accent--text">
                  <button type="button">
                    2019
                  </button>
                </div>
              </div>
              <button type="button"
                      class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--small"
              >
                <span class="v-btn__content">
                  <i aria-hidden="true"
                     class="v-icon notranslate mdi mdi-chevron-right theme--light"
                  >
                  </i>
                </span>
              </button>
            </div>
            <div class="v-date-picker-table v-date-picker-table--month theme--light">
              <table>
                <tbody>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-size--default v-btn--text theme--light"
                      >
                        <div class="v-btn__content">
                          Jan
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-size--default v-btn--text theme--light"
                      >
                        <div class="v-btn__content">
                          Feb
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-size--default v-btn--text theme--light"
                      >
                        <div class="v-btn__content">
                          Mar
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-size--default v-btn--text theme--light"
                      >
                        <div class="v-btn__content">
                          Apr
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-size--default v-btn--text theme--light"
                      >
                        <div class="v-btn__content">
                          May
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-size--default v-btn--text theme--light"
                      >
                        <div class="v-btn__content">
                          Jun
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-size--default v-btn--text theme--light"
                      >
                        <div class="v-btn__content">
                          Jul
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-size--default v-btn--text theme--light"
                      >
                        <div class="v-btn__content">
                          Aug
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-size--default v-btn--text theme--light"
                      >
                        <div class="v-btn__content">
                          Sep
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-size--default v-btn--text theme--light"
                      >
                        <div class="v-btn__content">
                          Oct
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-size--default v-btn--text theme--light"
                      >
                        <div class="v-btn__content">
                          Nov
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-size--default v-btn--text theme--light"
                      >
                        <div class="v-btn__content">
                          Dec
                        </div>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <div class="v-window-item"
             style="display: none;"
        >
          <div class="v-time-picker-clock v-time-picker-clock--indeterminate theme--light"
               style="width: 290px; height: 290px;"
          >
            <div class="v-time-picker-clock__ampm primary--text">
              <div class="v-picker__title__btn v-picker__title__btn--active">
                AM
              </div>
              <div class="v-picker__title__btn">
                PM
              </div>
            </div>
            <div class="v-time-picker-clock__outer">
              <div class="v-time-picker-clock__inner">
                <div class="v-time-picker-clock__hand"
                     style="transform: rotate(0deg) scaleY(1);"
                >
                </div>
                <span class="v-time-picker-clock__item v-time-picker-clock__item--active"
                      style="left: 50%; top: 0%;"
                >
                  <span>
                    12
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 75%; top: 6.698729810778062%;"
                >
                  <span>
                    1
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 93.30127018922192%; top: 24.999999999999993%;"
                >
                  <span>
                    2
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 100%; top: 50%;"
                >
                  <span>
                    3
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 93.30127018922194%; top: 74.99999999999999%;"
                >
                  <span>
                    4
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 75.00000000000001%; top: 93.30127018922192%;"
                >
                  <span>
                    5
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 50.00000000000001%; top: 100%;"
                >
                  <span>
                    6
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 25.000000000000014%; top: 93.30127018922194%;"
                >
                  <span>
                    7
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 6.698729810778076%; top: 75.00000000000003%;"
                >
                  <span>
                    8
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 0%; top: 50.00000000000001%;"
                >
                  <span>
                    9
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 6.6987298107780475%; top: 25.000000000000032%;"
                >
                  <span>
                    10
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 24.99999999999998%; top: 6.698729810778083%;"
                >
                  <span>
                    11
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VDatePicker.ts should allow setting picker props 1`] = `
<div class="v-picker v-card v-date-time-picker v-picker--landscape theme--light">
  <div class="v-picker__title v-picker__title--landscape primary">
    <div class="v-date-time-picker__headers">
      <div class="v-date-picker-title">
        <div class="v-picker__title__btn v-date-picker-title__year">
          -
        </div>
        <div class="v-picker__title__btn v-date-picker-title__date v-picker__title__btn--active">
          <div>
            -
          </div>
        </div>
      </div>
      <div class="v-time-picker-title">
        <div class="v-time-picker-title__time">
          <div class="v-picker__title__btn v-picker__title__btn--active">
            --
          </div>
          <span>
            :
          </span>
          <div class="v-picker__title__btn">
            --
          </div>
        </div>
      </div>
    </div>
    <div class="v-tabs v-tabs--grow theme--light">
      <div role="tablist"
           class="v-item-group theme--light v-slide-group v-tabs-bar primary--text"
      >
        <div class="v-slide-group__prev v-slide-group__prev--disabled">
        </div>
        <div class="v-slide-group__wrapper">
          <div class="v-slide-group__content v-tabs-bar__content">
            <div class="v-tabs-slider-wrapper"
                 style="transition: none;"
            >
              <div class="v-tabs-slider">
              </div>
            </div>
            <div tabindex="0"
                 aria-selected="true"
                 role="tab"
                 class="v-tab v-tab--active"
            >
              date
            </div>
            <div tabindex="0"
                 aria-selected="false"
                 role="tab"
                 class="v-tab"
            >
              time
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-picker__body theme--light"
       style="width: 290px;"
  >
    <div class="v-window v-item-group theme--light v-tabs-items">
      <div class="v-window__container">
        <div class="v-window-item v-window-item--active">
          <div>
            <div class="v-date-picker-header theme--light">
              <button type="button"
                      class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--small"
              >
                <span class="v-btn__content">
                  <i aria-hidden="true"
                     class="v-icon notranslate mdi mdi-chevron-left theme--light"
                  >
                  </i>
                </span>
              </button>
              <div class="v-date-picker-header__value">
                <div class="accent--text">
                  <button type="button">
                    December 2019
                  </button>
                </div>
              </div>
              <button type="button"
                      class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--small"
              >
                <span class="v-btn__content">
                  <i aria-hidden="true"
                     class="v-icon notranslate mdi mdi-chevron-right theme--light"
                  >
                  </i>
                </span>
              </button>
            </div>
            <div class="v-date-picker-table v-date-picker-table--date theme--light">
              <table>
                <thead>
                  <tr>
                    <th>
                      S
                    </th>
                    <th>
                      M
                    </th>
                    <th>
                      T
                    </th>
                    <th>
                      W
                    </th>
                    <th>
                      T
                    </th>
                    <th>
                      F
                    </th>
                    <th>
                      S
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          1
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          2
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          3
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          4
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          5
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          6
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          7
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          8
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          9
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          10
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          11
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          12
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          13
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          14
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          15
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          16
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          17
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          18
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          19
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          20
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          21
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          22
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          23
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          24
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          25
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          26
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          27
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          28
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          29
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          30
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          31
                        </div>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <div class="v-window-item"
             style="display: none;"
        >
          <div class="v-time-picker-clock v-time-picker-clock--indeterminate theme--light"
               style="width: 290px; height: 290px;"
          >
            <div class="v-time-picker-clock__ampm primary--text">
              <div class="v-picker__title__btn v-picker__title__btn--active">
                AM
              </div>
              <div class="v-picker__title__btn">
                PM
              </div>
            </div>
            <div class="v-time-picker-clock__outer">
              <div class="v-time-picker-clock__inner">
                <div class="v-time-picker-clock__hand"
                     style="transform: rotate(0deg) scaleY(1);"
                >
                </div>
                <span class="v-time-picker-clock__item v-time-picker-clock__item--active"
                      style="left: 50%; top: 0%;"
                >
                  <span>
                    12
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 75%; top: 6.698729810778062%;"
                >
                  <span>
                    1
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 93.30127018922192%; top: 24.999999999999993%;"
                >
                  <span>
                    2
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 100%; top: 50%;"
                >
                  <span>
                    3
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 93.30127018922194%; top: 74.99999999999999%;"
                >
                  <span>
                    4
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 75.00000000000001%; top: 93.30127018922192%;"
                >
                  <span>
                    5
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 50.00000000000001%; top: 100%;"
                >
                  <span>
                    6
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 25.000000000000014%; top: 93.30127018922194%;"
                >
                  <span>
                    7
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 6.698729810778076%; top: 75.00000000000003%;"
                >
                  <span>
                    8
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 0%; top: 50.00000000000001%;"
                >
                  <span>
                    9
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 6.6987298107780475%; top: 25.000000000000032%;"
                >
                  <span>
                    10
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 24.99999999999998%; top: 6.698729810778083%;"
                >
                  <span>
                    11
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VDatePicker.ts should allow setting time props 1`] = `
<div class="v-picker v-card v-date-time-picker theme--light">
  <div class="v-picker__title primary">
    <div class="v-date-time-picker__headers">
      <div class="v-date-picker-title">
        <div class="v-picker__title__btn v-date-picker-title__year">
          -
        </div>
        <div class="v-picker__title__btn v-date-picker-title__date v-picker__title__btn--active">
          <div>
            -
          </div>
        </div>
      </div>
      <div class="v-time-picker-title">
        <div class="v-time-picker-title__time">
          <div class="v-picker__title__btn v-picker__title__btn--active">
            --
          </div>
          <span>
            :
          </span>
          <div class="v-picker__title__btn">
            --
          </div>
        </div>
      </div>
    </div>
    <div class="v-tabs v-tabs--grow theme--light">
      <div role="tablist"
           class="v-item-group theme--light v-slide-group v-tabs-bar primary--text"
      >
        <div class="v-slide-group__prev v-slide-group__prev--disabled">
        </div>
        <div class="v-slide-group__wrapper">
          <div class="v-slide-group__content v-tabs-bar__content">
            <div class="v-tabs-slider-wrapper"
                 style="transition: none;"
            >
              <div class="v-tabs-slider">
              </div>
            </div>
            <div tabindex="0"
                 aria-selected="true"
                 role="tab"
                 class="v-tab v-tab--active"
            >
              date
            </div>
            <div tabindex="0"
                 aria-selected="false"
                 role="tab"
                 class="v-tab"
            >
              time
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-picker__body theme--light"
       style="width: 290px;"
  >
    <div class="v-window v-item-group theme--light v-tabs-items">
      <div class="v-window__container">
        <div class="v-window-item v-window-item--active">
          <div>
            <div class="v-date-picker-header theme--light">
              <button type="button"
                      class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--small"
              >
                <span class="v-btn__content">
                  <i aria-hidden="true"
                     class="v-icon notranslate mdi mdi-chevron-left theme--light"
                  >
                  </i>
                </span>
              </button>
              <div class="v-date-picker-header__value">
                <div class="accent--text">
                  <button type="button">
                    December 2019
                  </button>
                </div>
              </div>
              <button type="button"
                      class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--small"
              >
                <span class="v-btn__content">
                  <i aria-hidden="true"
                     class="v-icon notranslate mdi mdi-chevron-right theme--light"
                  >
                  </i>
                </span>
              </button>
            </div>
            <div class="v-date-picker-table v-date-picker-table--date theme--light">
              <table>
                <thead>
                  <tr>
                    <th>
                      S
                    </th>
                    <th>
                      M
                    </th>
                    <th>
                      T
                    </th>
                    <th>
                      W
                    </th>
                    <th>
                      T
                    </th>
                    <th>
                      F
                    </th>
                    <th>
                      S
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          1
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          2
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          3
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          4
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          5
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          6
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          7
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          8
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          9
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          10
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          11
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          12
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          13
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          14
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          15
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          16
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          17
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          18
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          19
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          20
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          21
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          22
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          23
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          24
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          25
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          26
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          27
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          28
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          29
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          30
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          31
                        </div>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <div class="v-window-item"
             style="display: none;"
        >
          <div class="v-time-picker-clock v-time-picker-clock--indeterminate theme--light"
               style="width: 290px; height: 290px;"
          >
            <div class="v-time-picker-clock__outer">
              <div class="v-time-picker-clock__inner">
                <div class="v-time-picker-clock__hand"
                     style="transform: rotate(0deg) scaleY(1);"
                >
                </div>
                <span class="v-time-picker-clock__item v-time-picker-clock__item--active"
                      style="left: 50%; top: 0%;"
                >
                  <span>
                    12
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 75%; top: 6.698729810778062%;"
                >
                  <span>
                    1
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 93.30127018922192%; top: 24.999999999999993%;"
                >
                  <span>
                    2
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 100%; top: 50%;"
                >
                  <span>
                    3
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 93.30127018922194%; top: 74.99999999999999%;"
                >
                  <span>
                    4
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 75.00000000000001%; top: 93.30127018922192%;"
                >
                  <span>
                    5
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 50.00000000000001%; top: 100%;"
                >
                  <span>
                    6
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 25.000000000000014%; top: 93.30127018922194%;"
                >
                  <span>
                    7
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 6.698729810778076%; top: 75.00000000000003%;"
                >
                  <span>
                    8
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 0%; top: 50.00000000000001%;"
                >
                  <span>
                    9
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 6.6987298107780475%; top: 25.000000000000032%;"
                >
                  <span>
                    10
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 24.99999999999998%; top: 6.698729810778083%;"
                >
                  <span>
                    11
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VDatePicker.ts should display the correct date in title and header 1`] = `
<div class="v-picker v-card v-date-time-picker theme--light">
  <div class="v-picker__title primary">
    <div class="v-date-time-picker__headers">
      <div class="v-date-picker-title">
        <div class="v-picker__title__btn v-date-picker-title__year">
          2005
        </div>
        <div class="v-picker__title__btn v-date-picker-title__date v-picker__title__btn--active">
          <div>
            Tue, Nov 1
          </div>
        </div>
      </div>
      <div class="v-time-picker-title">
        <div class="v-time-picker-title__time">
          <div class="v-picker__title__btn v-picker__title__btn--active">
            1
          </div>
          <span>
            :
          </span>
          <div class="v-picker__title__btn">
            05
          </div>
        </div>
      </div>
    </div>
    <div class="v-tabs v-tabs--grow theme--light">
      <div role="tablist"
           class="v-item-group theme--light v-slide-group v-tabs-bar primary--text"
      >
        <div class="v-slide-group__prev v-slide-group__prev--disabled">
        </div>
        <div class="v-slide-group__wrapper">
          <div class="v-slide-group__content v-tabs-bar__content">
            <div class="v-tabs-slider-wrapper"
                 style="transition: none;"
            >
              <div class="v-tabs-slider">
              </div>
            </div>
            <div tabindex="0"
                 aria-selected="true"
                 role="tab"
                 class="v-tab v-tab--active"
            >
              date
            </div>
            <div tabindex="0"
                 aria-selected="false"
                 role="tab"
                 class="v-tab"
            >
              time
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-picker__body theme--light"
       style="width: 290px;"
  >
    <div class="v-window v-item-group theme--light v-tabs-items">
      <div class="v-window__container">
        <div class="v-window-item v-window-item--active">
          <div>
            <div class="v-date-picker-header theme--light">
              <button type="button"
                      class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--small"
              >
                <span class="v-btn__content">
                  <i aria-hidden="true"
                     class="v-icon notranslate mdi mdi-chevron-left theme--light"
                  >
                  </i>
                </span>
              </button>
              <div class="v-date-picker-header__value">
                <div class="accent--text">
                  <button type="button">
                    November 2005
                  </button>
                </div>
              </div>
              <button type="button"
                      class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--small"
              >
                <span class="v-btn__content">
                  <i aria-hidden="true"
                     class="v-icon notranslate mdi mdi-chevron-right theme--light"
                  >
                  </i>
                </span>
              </button>
            </div>
            <div class="v-date-picker-table v-date-picker-table--date theme--light">
              <table>
                <thead>
                  <tr>
                    <th>
                      S
                    </th>
                    <th>
                      M
                    </th>
                    <th>
                      T
                    </th>
                    <th>
                      W
                    </th>
                    <th>
                      T
                    </th>
                    <th>
                      F
                    </th>
                    <th>
                      S
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                    </td>
                    <td>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--active v-btn--rounded theme--light accent"
                      >
                        <div class="v-btn__content">
                          1
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          2
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          3
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          4
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          5
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          6
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          7
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          8
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          9
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          10
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          11
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          12
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          13
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          14
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          15
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          16
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          17
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          18
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          19
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          20
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          21
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          22
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          23
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          24
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          25
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          26
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          27
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          28
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          29
                        </div>
                      </button>
                    </td>
                    <td>
                      <button type="button"
                              class="v-btn v-btn--text v-btn--rounded theme--light"
                      >
                        <div class="v-btn__content">
                          30
                        </div>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <div class="v-window-item"
             style="display: none;"
        >
          <div class="v-time-picker-clock theme--light"
               style="width: 290px; height: 290px;"
          >
            <div class="v-time-picker-clock__ampm primary--text">
              <div class="v-picker__title__btn">
                AM
              </div>
              <div class="v-picker__title__btn v-picker__title__btn--active">
                PM
              </div>
            </div>
            <div class="v-time-picker-clock__outer">
              <div class="v-time-picker-clock__inner">
                <div class="v-time-picker-clock__hand accent"
                     style="transform: rotate(390deg) scaleY(1);"
                >
                </div>
                <span class="v-time-picker-clock__item"
                      style="left: 50%; top: 0%;"
                >
                  <span>
                    12
                  </span>
                </span>
                <span class="v-time-picker-clock__item v-time-picker-clock__item--active accent"
                      style="left: 75%; top: 6.698729810778062%;"
                >
                  <span>
                    1
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 93.30127018922192%; top: 24.999999999999993%;"
                >
                  <span>
                    2
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 100%; top: 50%;"
                >
                  <span>
                    3
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 93.30127018922194%; top: 74.99999999999999%;"
                >
                  <span>
                    4
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 75.00000000000001%; top: 93.30127018922192%;"
                >
                  <span>
                    5
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 50.00000000000001%; top: 100%;"
                >
                  <span>
                    6
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 25.000000000000014%; top: 93.30127018922194%;"
                >
                  <span>
                    7
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 6.698729810778076%; top: 75.00000000000003%;"
                >
                  <span>
                    8
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 0%; top: 50.00000000000001%;"
                >
                  <span>
                    9
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 6.6987298107780475%; top: 25.000000000000032%;"
                >
                  <span>
                    10
                  </span>
                </span>
                <span class="v-time-picker-clock__item"
                      style="left: 24.99999999999998%; top: 6.698729810778083%;"
                >
                  <span>
                    11
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
